2008-12-27
	defined Builder extends Primitive
	bugfix for drawPoint and drawLine

2008-11-16
	support for multiple lights
	added points lights
	added VertexColor shading mode and VColor material
	added world.drawPoint and .drawLine
	perform backface culling
	
2008-11-09
	use dynamic shape allocation (single draw for color materials)
	added wire material

2008-11-05
	added directional lightning
	added gouraud and flat shading
	improved triangle sort perfs

2008-11-03
	basic rendering