@@ -1,5 +1,5 @@
 <html>
-<body>
+<body bgcolor="#EEEEEE">
 <object
   classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
   codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0"
